--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
       href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700&display=swap">
   </head>
   <body>
-    <div id="app"></div>
+    <div id="checkout">Loading</div>
     <script src="bundle.js"></script>
   </body>
 </html>
